--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,8 +1,8 @@
-alt_send_esc = true
-background_opacity = 0.2
-enable_experimental_conpty_backend = false
+#alt_send_esc = true
+#background_opacity = 0.2
+#enable_experimental_conpty_backend = false
 live_config_reload = true
-"window.dynamic_title" = true
+#"window.dynamic_title" = true
 working_directory = "None"
 
 [bell]
@@ -49,28 +49,28 @@ unfocused_hollow = true
 log_level = "Warn"
 persistent_logging = false
 print_events = false
-ref_test = false
+#ref_test = false
 render_timer = false
 
 [font]
-size = 10
-use_thin_strokes = true
-
-[font.bold]
-family = "Source Code Pro"
-style = "Bold"
+size = 14
 
 [font.glyph_offset]
 x = 0
 y = 4
 
-[font.italic]
-family = "Source Code Pro"
-style = "Italic"
+# [font.bold]
+# family = "Source Code Pro"
+# style = "Bold"
 
-[font.normal]
-family = "Iosevka Term"
-style = "Regular"
+# [font.italic]
+# family = "Source Code Pro"
+# style = "Italic"
+
+# [font.normal]
+# #family = "Iosevka Term"
+# family = "Source Code Pro"
+# style = "Regular"
 
 [font.offset]
 x = 0
@@ -614,17 +614,17 @@ hide_when_typing = true
 action = "PasteSelection"
 mouse = "Middle"
 
-[mouse.double_click]
-threshold = 300
+# [mouse.double_click]
+# threshold = 300
 
-[mouse.triple_click]
-threshold = 300
+# [mouse.triple_click]
+# threshold = 300
 
-[mouse.url]
-modifiers = "None"
+# [mouse.url]
+# modifiers = "None"
 
-[mouse.url.launcher]
-program = "xdg-open"
+# [mouse.url.launcher]
+# program = "xdg-open"
 
 [scrolling]
 history = 10000
@@ -643,6 +643,7 @@ decorations = "full"
 dynamic_padding = true
 startup_mode = "Windowed"
 title = "Good morning, fross."
+opacity = 0.7
 
 [window.dimensions]
 columns = 85
