Adds some updates to PopOS configurations, emacs configs, a basic Cargo.toml, the convert_timestamp.py script template, and improvements to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 .pypirc
+.emacs.d/auto-save-list/,
+.emacs.d/org-clock-save.el,
+.emacs.d/org-roam.db,
+.emacs.d/recentf
+.emacs.d/history,
+.emacs.d/auto-save-list/,
+.emacs.d/org-clock-save.el,
+.emacs.d/org-roam.db,
+.emacs.d/recentf
