Updates to .el web dev files, bash prof, kitty config, functions, .gitconfig, new scripts.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -61,13 +61,13 @@ map ctrl+shift+backspace change_font_size all 0
 # cursor customization
 # block / beam / underline
 cursor_shape block
-cursor_blink_interval 0
-cursor_stop_blinking_after 0
+cursor_blink_interval 1
+#cursor_stop_blinking_after 0
 shell_integration no-cursor
 
 # scrollback
 scrollback_lines 10000
-wheel_scroll_multiplier 3.0
+#wheel_scroll_multiplier 10.0
 
 # mouse
 mouse_hide_wait -1
@@ -104,15 +104,19 @@ inactive_tab_font_style normal
 
 kitty_mod ctrl+shift
 action_alias launch_new_tab launch --cwd=current --type=tab
-map kitty_mod+t launch_new_tab
-map kitty_mod+c copy_to_clipboard
-map kitty_mod+v paste_from_clipboard
-
+map kitty_mod+space launch_new_tab
+map kitty_mod+r tab_title_template
 
 map ctrl+shift+t new_tab
 map ctrl+shift+right next_tab
 map ctrl+shift+left previous_tab
 map ctrl+shift+q close_tab
+
+# copy - paste
+map kitty_mod+c copy_to_clipboard
+map kitty_mod+v paste_from_clipboard
+
+
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
@@ -902,12 +906,12 @@ map ctrl+shift+q close_tab
 
 #: Terminal bell {{{
 
-#enable_audio_bell yes
+enable_audio_bell no
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
 
-#visual_bell_duration 0.05
+visual_bell_duration 0.05
 
 #: The visual bell duration (in seconds). Flash the screen when a bell
 #: occurs for the specified number of seconds. Set to zero to disable.
@@ -932,7 +936,7 @@ map ctrl+shift+q close_tab
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on Linux.
 
-# bell_on_tab "🔔 "
+ bell_on_tab "🔔 "
 
 #: Some text or a Unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has a bell. If you want to use leading
@@ -946,6 +950,16 @@ map ctrl+shift+q close_tab
 
 # See .bash_profile for alias definition
 #command_on_bell play_random_rune_sound
+command_on_bell /bin/bash -c "/home/matt/.functions.sh && play_random_rune_sound"
+
+
+# WORKING!
+#command_on_bell /bin/bash -c "/home/matt/.functions.sh && play_random_rune_sound"
+
+
+# If things really aren't working...
+#command_on_bell /bin/bash -c "find /storage/misc/Dota_rune_mp3s/ -type f -name '*.mp3.mpga' | xargs shuf -n1 -e | xargs ffplay -nodisp -autoexit -t 1.5 -volume 30 -loglevel quiet -i"
+
 
 #: Program to run when a bell occurs. The environment variable
 #: KITTY_CHILD_CMDLINE can be used to get the program running in the
@@ -1270,7 +1284,7 @@ map ctrl+shift+q close_tab
 #: The maximum number of cells that can be used to render the text in
 #: a tab. A value of zero means that no limit is applied.
 
-# tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{tab.last_focused_progress_percent}{title}"
+tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{tab.last_focused_progress_percent}{title.split('/')[-1]}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -2200,22 +2214,27 @@ map ctrl+shift+q close_tab
 
 # map kitty_mod+page_up scroll_page_up
 # map cmd+page_up       scroll_page_up
+map alt+v scroll_page_up
+
 
 #: Scroll page down
 
 # map kitty_mod+page_down scroll_page_down
 # map cmd+page_down       scroll_page_down
+map ctrl+v  scroll_page_down
+
 
 #: Scroll to top
 
 # map kitty_mod+home scroll_home
 # map cmd+home       scroll_home
+map shift+page_up   scroll_home
 
 #: Scroll to bottom
 
 # map kitty_mod+end scroll_end
 # map cmd+end       scroll_end
-
+map shift+page_down scroll_end
 #: Scroll to previous shell prompt
 
 # map kitty_mod+z scroll_to_prompt -1
